<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="co.shortbrain.singlescreenapp.MainActivity"
    tools:showIn="@layout/app_bar_main">


    <LinearLayout
        android:id="@+id/content_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:adjustViewBounds="true"
            android:layout_gravity="center"
            android:src="@drawable/da"
            app:srcCompat="@android:color/darker_gray"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    app:srcCompat="@drawable/ic_business_black_24dp" />

                <android.support.v4.widget.Space
                    android:layout_width="20dp"
                    android:layout_height="wrap_content" />


                <TextView
                    android:id="@+id/textViewAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:contentDescription="@string/company_address_description"
                    android:text="@string/company_address"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    tools:text="397 Avenue des Althéas\nLes Collines de Valescure\n83700 Saint Raphaël" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <ImageView
                    android:id="@+id/imageViewPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    app:srcCompat="@drawable/ic_phone_black_24dp" />

                <android.support.v4.widget.Space
                    android:layout_width="20dp"
                    android:layout_height="wrap_content" />


                <TextView
                    android:id="@+id/textViewPhone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:contentDescription="@string/company_phone_description"
                    android:text="@string/company_phone"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    tools:text="04 94 83 23 00" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <ImageView
                    android:id="@+id/imageViewEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    app:srcCompat="@drawable/ic_email_black_24dp"
                    android:contentDescription="@string/email" />

                <android.support.v4.widget.Space
                    android:layout_width="20dp"
                    android:layout_height="wrap_content" />


                <TextView
                    android:id="@+id/textViewEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:contentDescription="@string/company_email_description"
                    android:text="@string/company_email"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    tools:text="info@dynamicathletic.com" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <ImageView
                    android:id="@+id/imageViewWebsite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    app:srcCompat="@drawable/ic_language_black_24dp"
                    android:contentDescription="@string/website" />

                <android.support.v4.widget.Space
                    android:layout_width="20dp"
                    android:layout_height="wrap_content" />


                <TextView
                    android:id="@+id/textViewWebsite"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:contentDescription="@string/company_website_description"
                    android:text="@string/company_website"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    tools:text="www.dynamicathletic.com" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/textViewDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:contentDescription="@string/company_info_description"
                    android:text="@string/company_info"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    tools:text="Athletism Equipments Pro and Amateur\nPolanik Exclusive distributor in France" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
